@@ -35,7 +35,6 @@ namespace librarysim.Backend
 			}
 		}
 		
-		
 		private void Close()
 		{
 			try
@@ -49,273 +48,188 @@ namespace librarysim.Backend
 			}
 		}
 		
-		#region Patrons
-		
-		/// <summary>
-        /// Retrieve all patrons(null) or one specific patron(patron uid)
-        /// </summary>
-        /// <param name="patronID"></param>
-        /// <param name="name"></param>
-        /// <param name="phoneNumber"></param>
-        /// <param name="phoneNumber"></param>
-        /// <param name="address"></param>
-        /// <param name="gender"></param>
-        /// <param name="dob"></param>
-        /// <returns>patron Data Set</returns>
-        public DataSet PatronRetrieve(int? patronID, string name, string phoneNumber, string address, 
-		                  string gender, string age)
-        {
+		private void ExecuteNonQuery( string command )
+		{
 			this.Open();
-            DataSet patronDS = new DataSet();
-            try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-				string command = String.Format("select * from Patrons");
-				//command = String.Format(command + "where ID = {0} and Name = \"{1}\" and PhoneNumber = \"{2}\" and Address = \"{3}\" and Gender = \"{4}\" and Age = \"{5}\""
-				 //                            , patronID, name, phoneNumber, address, gender, age);
+			try
+			{
+            	SqliteCommand cmd = connection.CreateCommand();
+				cmd.CommandText = command;
+				cmd.ExecuteNonQuery();
+			}
+			catch( SqliteExecutionException ex )
+			{
+				throw ex;
+			}
+			this.Close();
+		}
+		
+		private DataSet ExecuteScalar( string command, string table )
+		{
+			this.Open();
+			DataSet resultset = new DataSet();
+  			try
+			{
+				SqliteCommand cmd = connection.CreateCommand();
 				cmd.CommandText = command;
 				SqliteDataAdapter DA = new SqliteDataAdapter(cmd);
-				DA.Fill(patronDS, "Patrons");
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
+				DA.Fill(resultset, table);
+			}
+			catch( SqliteExecutionException ex )
+			{
+				throw ex;
+			}
 			this.Close();
-			return patronDS;
+			return resultset;			
+		}
+		
+		#region Patrons
+		
+        public DataSet PatronRetrieve( int? patronID, string age)
+        {
+			bool patronIDIsNull = true;
+			string command = String.Format("select * from Patrons");
+			if(patronID != null)
+			{
+				patronIDIsNull = false;
+				command = String.Format(command + " where ID = {0}", patronID);
+			
+			}
+			if(age != null)
+			{
+				if(patronIDIsNull){
+					command = String.Format(command + " where Age = {0}", age);
+				}else{
+					command = String.Format(command + " Age = {0}", age);
+				}
+			}
+			return ExecuteScalar(command, "Patrons");
         }
 		
-        /// <summary>
-        /// Add a new patron
-        /// </summary>
-        /// <param name="name"></param>
-        /// <param name="phoneNumber"></param>
-        /// <param name="address"></param>
-        /// <param name="gender"></param>
-        /// <param name="dob"></param>
+		public DataSet PatronNameSearch(string name)
+        {
+			return ExecuteScalar(String.Format("select * from Patrons where Name like '{0}'", name), "Patrons");
+        }
+		
         public void PatronInsert(string name, string phoneNumber, string address, string gender, string age)
         {
-			this.Open();
-            try
-            {
-				SqliteCommand cmd = connection.CreateCommand();
-				cmd.CommandText = String.Format("insert into Patrons (Name,PhoneNumber,Address,Gender,Age) VALUES (\"{0}\", \"{1}\", \"{2}\", \"{3}\", \"{4}\")"
-				                             , name, phoneNumber, address, gender, age);
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-				throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("insert into Patrons (Name,PhoneNumber,Address,Gender,Age) VALUES (\"{0}\", \"{1}\", \"{2}\", \"{3}\", \"{4}\")"
+				                             , name, phoneNumber, address, gender, age));
         }
 
-        /// <summary>
-        /// Update an existing patron
-        /// </summary>
-        /// <param name="name"></param>
-        /// <param name="phoneNumber"></param>
-        /// <param name="address"></param>
-        /// <param name="gender"></param>
-        /// <param name="dob"></param>
         public void PatronUpdate(int patronID, string name, string phoneNumber, string address, string gender, string age)
         {
-			this.Open();
-            try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-                cmd.CommandText = String.Format("UPDATE Patrons SET Name = \"{0}\", PhoneNumber = \"{1}\", Address = \"{2}\", Gender = \"{3}\", Age = \"{4}\" WHERE (ID = {5})"
-				                                , name, phoneNumber, address, gender, age, patronID);
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("UPDATE Patrons SET Name = \"{0}\", PhoneNumber = \"{1}\", Address = \"{2}\", Gender = \"{3}\", Age = \"{4}\" WHERE (ID = {5})"
+				                                , name, phoneNumber, address, gender, age, patronID));
         }
 
-        /// <summary>
-        /// Delete a patron
-        /// </summary>
-        /// <param name="patronID"></param>
         public void PatronDelete(int patronID)
         {
-			this.Open();
-            try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-                cmd.CommandText = String.Format("DELETE FROM Patrons WHERE ID = {0}", patronID);
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("DELETE FROM Patrons WHERE ID = {0}", patronID));
         }
         #endregion
 	
 		#region Books
 		
-		/// <summary>
-        /// Retrieve all books(null) or one specific book(book id)
-        /// </summary>
-        /// <param name="bookID"></param>
-        /// <param name="patronID"></param>
-        /// <param name="type"></param>
-        /// <param name="title"></param>
-        /// <param name="author"></param>
-        /// <param name="description"></param>
-        /// <param name="checkedout"></param>
-        /// <param name="checkedin"></param>
-        /// <param name="reserved"></param>
-        /// <returns>book Data Set</returns>
-		public DataSet BookRetrieve(int? bookID, int? patronID, string type, string title, string author, 
-		                            string description, DateTime? checkedout)
+		public DataSet BookRetrieve(int? bookID, int? patronID)
 		{
-			this.Open();
-			DataSet bookDS = new DataSet();
-			try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-				cmd.CommandText = String.Format("select * from Books");// where ID = {0} and Patron = {1} and Type = \"{2}\" and Title = \"{3}\" and Author = \"{4}\" and description = \"{5}\" and Checkedout = \"{6}\"
-				                           //  , bookID, patronID, type, title, author, description, checkedout.ToString());
-				SqliteDataAdapter DA = new SqliteDataAdapter(cmd);
-				DA.Fill(bookDS, "Books");
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
-			return bookDS;
+			bool bookIDIsNull = true;
+			string command = String.Format("select * from Books");
+			if(bookID != null)
+			{
+				bookIDIsNull = false;
+				command = String.Format(command + " where ID = {0}", bookID);
+			
+			}
+			if(patronID != null)
+			{
+				if(bookIDIsNull){
+					command = String.Format(command + " where Patron = {0}", patronID);
+				}else{
+					command = String.Format(command + " Patron = {0}", patronID);
+				}
+			}
+			return ExecuteScalar(command, "Books");
 		}
 		
 		
         public void BookInsert(string type, string title, string author, string description)
 		{
-			this.Open();
-            try
-            {
-				SqliteCommand cmd = connection.CreateCommand();
-				cmd.CommandText = String.Format("insert into Books (Type,Title,Author,Description) VALUES (\"{0}\", \"{1}\", \"{2}\", \"{3}\")"
-				                             , type, title, author, description);
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-				throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("insert into Books (Type,Title,Author,Description) VALUES (\"{0}\", \"{1}\", \"{2}\", \"{3}\")"
+				                             , type, title, author, description));
 		}
 
         public void BookUpdate(int bookID, int? patronID, string type, string title, string author,
 		                string description, DateTime? checkedout)
 		{
-			this.Open();
-            try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-                cmd.CommandText = String.Format("UPDATE Books SET Patron = {0}, Type = \"{1}\", Title = \"{2}\", Author = \"{3}\", Description = \"{4}\", Checkedout = \"{5}\""
-				                                , patronID, type, title, author, description, checkedout.ToString());
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("UPDATE Books SET Patron = {0}, Type = \"{1}\", Title = \"{2}\", Author = \"{3}\", Description = \"{4}\", Checkedout = \"{5}\""
+				                                , patronID, type, title, author, description, checkedout.ToString()));
+		}
+		
+		public void BookCheckOut(int bookID, int patronID, DateTime checkedout)
+		{
+			ExecuteNonQuery(String.Format("UPDATE Books SET Patron = {0}, Checkedout = \"{1}\" WHERE ID = {2}" , patronID, checkedout.ToString(), bookID));
+		}
+		
+		public void BookCheckIn(int bookID)
+		{
+			ExecuteNonQuery(String.Format("UPDATE Books SET Patron = {0}, Checkedout = \"{1}\" WHERE ID = {2}" , null, null, bookID));
 		}
 		
         public void BookDelete(int bookID)
 		{
-			this.Open();
-            try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-                cmd.CommandText = String.Format("DELETE FROM Books WHERE ID = {0}", bookID);
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("DELETE FROM Books WHERE ID = {0}", bookID));
 		}
         #endregion
 
 		#region Media
-		public DataSet MediaRetrieve(int? mediaID, int? patronID, string type, string title, string author, 
-		                            string rating, DateTime? checkedout )
+		public DataSet MediaRetrieve(int? mediaID, int? patronID)
 		{
-			this.Open();
-			DataSet mediaDS = new DataSet();
-			try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-				cmd.CommandText = String.Format("select * from Media");// where ID = {0} and Patron = {1} and Type = \"{2}\" and Title = \"{3}\" and Rating = \"{4}\" and description = \"{5}\" and Checkedout = \"{6}\"
-				                            // , mediaID, patronID, type, title, author, rating, checkedout.ToString());
-				SqliteDataAdapter DA = new SqliteDataAdapter(cmd);
-				DA.Fill(mediaDS, "Media");
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
-			return mediaDS;
+			bool mediaIDIsNull = true;
+			string command = String.Format("select * from Media");
+			if(mediaID != null)
+			{
+				mediaIDIsNull = false;
+				command = String.Format(command + " where ID = {0}", mediaID);
+			
+			}
+			if(patronID != null)
+			{
+				if(mediaIDIsNull){
+					command = String.Format(command + " where Patron = {0}", patronID);
+				}else{
+					command = String.Format(command + " Patron = {0}", patronID);
+				}
+			}
+			return ExecuteScalar(command, "Media");
 		}
 		
         public void MediaInsert(string type, string title, string rating, string description)
 		{
-			this.Open();
-            try
-            {
-				SqliteCommand cmd = connection.CreateCommand();
-				cmd.CommandText = String.Format("insert into Media (Type,Title,Rating,Description) VALUES (\"{0}\", \"{1}\", \"{2}\", \"{3}\")"
-				                             , type, title, rating, description);
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-				throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("insert into Media (Type,Title,Rating,Description) VALUES (\"{0}\", \"{1}\", \"{2}\", \"{3}\")"
+				                             , type, title, rating, description));
 		}
 
         public void MediaUpdate(int mediaID, int? patronID, string type, string title, string rating,
 		                string description, DateTime? checkedout)
 		{
-			this.Open();
-            try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-                cmd.CommandText = String.Format("UPDATE Media SET Patron = {0}, Type = \"{1}\", Title = \"{2}\", Rating = \"{3}\", Description = \"{4}\", Checkedout = \"{5}\""
-                                                , patronID, type, title, rating, description, checkedout.ToString());
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("UPDATE Media SET Patron = {0}, Type = \"{1}\", Title = \"{2}\", Rating = \"{3}\", Description = \"{4}\", Checkedout = \"{5}\""
+                                                , patronID, type, title, rating, description, checkedout.ToString()));
+		}
+		
+		public void MediaCheckOut(int mediaID, int patronID, DateTime checkedout)
+		{
+			ExecuteNonQuery(String.Format("UPDATE Media SET Patron = {0}, Checkedout = \"{1}\" WHERE ID = {2}" , patronID, checkedout.ToString(), mediaID));
+		}
+		
+		public void MediaCheckIn(int mediaID)
+		{
+			ExecuteNonQuery(String.Format("UPDATE Media SET Patron = {0}, Checkedout = \"{1}\" WHERE ID = {2}" , null, null, mediaID));
 		}
 		
         public void MediaDelete(int mediaID)
 		{
-			this.Open();
-            try
-            {
-                SqliteCommand cmd = connection.CreateCommand();
-                cmd.CommandText = String.Format("DELETE FROM Media WHERE ID = {0}", mediaID);
-				cmd.ExecuteNonQuery();
-            }
-            catch (SqliteExecutionException ex)
-            {
-                throw ex;
-            }
-			this.Close();
+			ExecuteNonQuery(String.Format("DELETE FROM Media WHERE ID = {0}", mediaID));
 		}
         #endregion
 		
